# Makine-Launcher

./: .clang-format  .clang-tidy  .editorconfig  .env.example  .gitattributes  .gitignore  .sentryclirc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  vcpkg-configuration.json  vcpkg.json
core/: CMakeLists.txt
core/include/formats/: gamemaker_data.hpp  renpy_rpa.hpp  unity_bundle.hpp
core/include/makine/: archive_utils.hpp  async.hpp  audit.hpp  cache.hpp  concurrent_queue.hpp  config.hpp  constants.hpp  core.hpp  crash_recovery.hpp  credential_store.hpp  crypto_utils.hpp  database.hpp  error.hpp  features.hpp  file_integrity.hpp  fwd.hpp  game_detector.hpp  health.hpp  json_utils.hpp  lazy.hpp  logging.hpp  memory.hpp  metrics.hpp  mio_utils.hpp  package_catalog.hpp  parallel.hpp  patch_engine.hpp  path_utils.hpp  runtime_manager.hpp  sandbox.hpp  security.hpp  sqlite_utils.hpp  ssl_pinning.hpp  string_pool.hpp  types.hpp  utf_utils.hpp  validation.hpp  vdf_parser.hpp  version.hpp
core/include/makine/detail/: debug.hpp  mio_utils.hpp  scoped_metrics.hpp  string_pool.hpp
core/include/makine/types/: common.hpp  game_types.hpp  patch_types.hpp
core/src/: core.cpp
core/src/config/: config.cpp
core/src/crash_recovery/: crash_recovery.cpp
core/src/database/: database.cpp
core/src/file_integrity/: file_integrity.cpp
core/src/game_detector/: epic_scanner.cpp  game_detector.cpp  gog_scanner.cpp  steam_scanner.cpp
core/src/game_detector/engines/: engine_detectors.hpp  misc_detectors.cpp  renpy_detector.cpp  rpgmaker_detector.cpp  unity_detector.cpp  unreal_detector.cpp
core/src/package_catalog/: package_catalog.cpp
core/src/patch_engine/: patch_engine.cpp
core/src/platform/windows/: filesystem.cpp  registry.cpp
core/src/runtime/: runtime_manager.cpp
core/src/security/: credential_store.cpp  security_manager.cpp  ssl_pinning.cpp
core/tests/: test_archive_utils.cpp  test_async.cpp  test_audit.cpp  test_cache.cpp  test_concurrent_queue.cpp  test_config.cpp  test_core.cpp  test_crash_recovery.cpp  test_crypto_utils.cpp  test_database.cpp  test_error.cpp  test_file_integrity.cpp  test_game_detector.cpp  test_health.cpp  test_json_utils.cpp  test_lazy.cpp  test_main.cpp  test_memory.cpp  test_metrics.cpp  test_package_catalog.cpp  test_parallel.cpp  test_patch_engine.cpp  test_path_utils.cpp  test_rpa_parser.cpp  test_runtime_manager.cpp  test_sandbox.cpp  test_security.cpp  test_sqlite_utils.cpp  test_ssl_pinning.cpp  test_string_pool.cpp  test_utf_utils.cpp  test_validation.cpp  test_version.cpp
core/tests/benchmark/: CMakeLists.txt  bench_json_parsing.cpp
core/tests/fixtures/: README.md
core/tests/fixtures/sample_gamemaker_game/: README.txt
core/tests/fixtures/sample_renpy_game/game/: script.rpy
core/tests/fixtures/sample_renpy_game/renpy/: __init__.py
core/tests/fixtures/sample_rpgmaker_game/: package.json
core/tests/fixtures/sample_rpgmaker_game/www/data/: Actors.json  Map001.json  System.json
core/tests/fixtures/sample_unity_game/: README.txt
core/tests/fuzz/: CMakeLists.txt  fuzz_json_parser.cpp
core/tests/integration/: CMakeLists.txt  test_integration_main.cpp
core/tests/mocks/: mock_database.hpp  mock_scanner.hpp
qml/: CMakeLists.txt
qml/qml/: GameDetailScreen.qml  HomeScreen.qml  Main.qml  OnboardingWizard.qml  SettingsScreen.qml
qml/qml/components/: AmbientGlow.qml  AnnouncementCard.qml  AppBackground.qml  BatchOperationsPanel.qml  CatalogSection.qml  CategoryItem.qml  ClickableRow.qml  DisabledSetting.qml  EmptyState.qml  FocusRing.qml  GameCard.qml  GameCardSkeleton.qml  GameDetectionCard.qml  GameSection.qml  GameToast.qml  GradientBorder.qml  HorizontalGameStrip.qml  InfoSettingWithBadge.qml  NavBar.qml  NavItem.qml  PerformanceMonitor.qml  ProjectShowcaseCard.qml  RegionSelector.qml  SectionContainer.qml  SettingsCard.qml  SettingsDivider.qml  SettingsSidebar.qml  SkeletonLoader.qml  StyledScrollBar.qml  StyledToolTip.qml  ThemeSetting.qml  TitleBar.qml  ToggleSetting.qml  TranslationOverlay.qml  TrayPopup.qml  TurkishFlagBadge.qml
qml/qml/controllers/: GameDataResolver.qml  GameDetailViewModel.qml  InstallFlowController.qml
qml/qml/dialogs/: AntiCheatWarningDialog.qml  BaseDialog.qml  ConfirmDialog.qml  DialogCloseButton.qml  InstallOptionsDialog.qml  UpdateAlertDialog.qml  VariantSelectionDialog.qml
qml/qml/screens/: HomePage.qml  Library.qml
qml/qml/screens/detail/: AboutSection.qml  BackupSection.qml  ContributorsSection.qml  GameDetailOverlay.qml  HeroSection.qml  InfoTilesBar.qml  RuntimeSection.qml  TranslationActionButton.qml  UpdateBanner.qml
qml/qml/screens/onboarding/: ReadyStep.qml  ScanStep.qml  ThemeStep.qml  WelcomeLoginStep.qml
qml/qml/screens/settings/: AboutSettings.qml  BackupsSettings.qml  DisplaySettings.qml  GeneralSettings.qml  PerformanceSettings.qml  PluginSettingsPage.qml  PluginsSettings.qml  TranslationSettings.qml
qml/qml/theme/: Dimensions.qml  Theme.qml
qml/resources/: app.manifest  app.rc  app.rc.in
qml/src/: main.cpp
qml/src/services/: apppaths.h  appprotection.cpp  appprotection.h  authservice.cpp  authservice.h  backupmanager.cpp  backupmanager.h  batchoperationservice.cpp  batchoperationservice.h  catalogproxymodel.cpp  catalogproxymodel.h  catalogstore.cpp  catalogstore.h  cdnconfig.h  corebridge.cpp  corebridge.h  crashreporter.cpp  crashreporter.h  detailfetcher.cpp  detailfetcher.h  frametimer.cpp  frametimer.h  gameservice.cpp  gameservice.h  imagecachemanager.cpp  imagecachemanager.h  installflowservice.cpp  installflowservice.h  integrityservice.cpp  integrityservice.h  localpackagemanager.cpp  localpackagemanager.h  manifestsyncservice.cpp  manifestsyncservice.h  memoryprofiler.cpp  memoryprofiler.h  mkpkformat.h  networksecurity.cpp  networksecurity.h  obfstring.h  (+35 more)
tests/plugins/dummy/: CMakeLists.txt  dummy_plugin.cpp  manifest.json
tests/ui/: CMakeLists.txt  test_catalogstore.cpp  test_cdnconfig.cpp  test_pathsecurity.cpp  test_updateservice.cpp  test_vdfparser.cpp
(+45 files in other folders)
